@@ -548,6 +548,7 @@ tty_input_char (struct tty *t, int c)
   switch (c)
     {
     case 0x0d: /* Control-M */
+      t->inputline[t->inputline_len++] = '\n';
       tty_echo_char (t, 0x0d);
       tty_echo_char (t, 0x0a);
       t->flag_input_avail = 1;
@@ -581,7 +582,7 @@ tty_input_char (struct tty *t, int c)
 	}
       break;
     default:
-      if (t->inputline_len < sizeof (t->inputline))
+      if (t->inputline_len < sizeof (t->inputline) - 1)
 	{
 	  tty_echo_char (t, c);
 	  t->inputline[t->inputline_len++] = c;
@@ -791,6 +792,12 @@ check_rx (void *arg)
   return 0;
 }
 
+/*
+ * Returns -1 on connection close
+ *          0 on timeout.
+ *          >0 length of the inputline (including final \n) 
+ *
+ */
 int
 tty_recv (struct tty *t, uint8_t *buf, uint32_t *timeout)
 {
